Optymalizacja o 90 % zurzycie ramu oraz dodanie funkcji matematycznych, css i trochę testów